--- a/humanize_calculator.ipynb
+++ b/humanize_calculator.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          1\n",
+      "555 + 12342\n",
       "Okay\n"
      ]
     }
@@ -19,7 +19,7 @@
     "good_input=0\n",
     "while good_input!=1:\n",
     "    input_calc=input()\n",
-    "    input_check=input_calc.strip()\n",
+    "    input_check=input_calc.replace(\" \", \"\")\n",
     "    if (not input_check) or (not re.match(\"^[0-9,+,\\-,=,/,*,^\\s]*$\", input_check)):\n",
     "        print(\"Invalid input\")\n",
     "        continue\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'twelve plus three hundred forty four'"
+       "'five hundred fifty five plus twelve thousand three hundred forty two'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
